syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.perficient.order.models";
option java_multiple_files = true;

message ProductRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

message ProductResponse {
  int32 product_id = 1;
  string name = 2;
  int32 quantity = 3;
}

message OrderResponse {
  int32 order_id = 1;
  repeated ProductResponse products = 2;
  google.protobuf.Timestamp creation_date = 3;
  string customer = 4;
}

service GenerateOrders {
  rpc create(stream ProductRequest) returns (OrderResponse) {}
}